Refactor order and product detail pages to use updated data structures and improve readability
- Updated order handling to use OrderResponse instead of Order, modifying related components accordingly.
- Changed order status constants to uppercase for consistency.
- Refactored product detail page to extract shop information into variables for better clarity.
- Adjusted price checks to ensure they are greater than zero before rendering.
- Enhanced shop page to utilize seller profile data, replacing mock data with dynamic values.
- Improved filtering logic for products based on seller ID and category.